versions/v2.9/modules/en/pages/observability/istio/guides/enable-istio-in-namespace.adoc
= Enable Istio in a Namespace
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/istio-setup-guide/enable-istio-in-namespace.adoc 
:product-path: observability/istio/guides/enable-istio-in-namespace.adoc
:experimental:

You will need to manually enable Istio in each namespace that you want to be tracked or controlled by Istio. When Istio is enabled in a namespace, the Envoy sidecar proxy will be automatically injected into all new workloads that are deployed in the namespace.

This namespace setting will only affect new workloads in the namespace. Any preexisting workloads will need to be re-deployed to leverage the sidecar auto injection.

[NOTE]
.Prerequisite:
====

To enable Istio in a namespace, the cluster must have Istio installed.
====


. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Go to the namespace where you want to enable Istio and click *⋮  > Enable Istio Auto Injection*. Alternately, click the namespace, and then on the namespace detail page, click *⋮  > Enable Istio Auto Injection*.

*Result:* The namespace now has the label `istio-injection=enabled`. All new workloads deployed in this namespace will have the Istio sidecar injected by default.

== Verifying that Automatic Istio Sidecar Injection is Enabled

To verify that Istio is enabled, deploy a hello-world workload in the namespace. Go to the workload and click the pod name. In the *Containers* section, you should see the `istio-proxy` container.

== Excluding Workloads from Being Injected with the Istio Sidecar

If you need to exclude a workload from getting injected with the Istio sidecar, use the following annotation on the workload:

----
sidecar.istio.io/inject: “false”
----

To add the annotation to a workload,

. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. Click *Workload*.
. Go to the workload that should not have the sidecar and edit as yaml
. Add the following key, value `sidecar.istio.io/inject: false` as an annotation on the workload
. Click *Save*.

*Result:* The Istio sidecar will not be injected into the workload.

[NOTE]
====

If you are having issues with a Job you deployed not completing, you will need to add this annotation to your pod using the provided steps. Since Istio Sidecars run indefinitely, a Job cannot be considered complete even after its task has completed.
====

== xref:observability/istio/guides/use-istio-sidecar.adoc[Next: Add Deployments with the Istio Sidecar]
